fix search bar alignment

--- a/upstream/app/assets/stylesheets/combinations.css.scss
+++ b/upstream/app/assets/stylesheets/combinations.css.scss
@@ -3,6 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 div.search{
-  padding:1em; 
+  padding:0 1em; 
   display:inline-block;
 }
